--- a/angular2-seed-final/angular2-seed-final/app/signup-form.component.html
+++ b/angular2-seed-final/angular2-seed-final/app/signup-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="SignUp" (ngSubmit)="onSignUp()">
-    <div><h1> New user Signup</h1> </div>
+    <!---div><h1> Sign In</h1> </div>
     <div class ="form-Group" >
         <div> <label >Username  </label></div>
         <input 
@@ -19,5 +19,11 @@
              formControlName="password"
              required>
     </div> <div><h2></h2></div>
-    <button class="btn btn-primary" type="Submit">Sign Up</button>
+    <button class="btn btn-primary" type="button">Sign In</button-->
+    <h1>Welcome to Mentor mentee </h1>
+    <input type="image" src="app/Sign-In.png" border="0" alt="Submit" />
 </form>
+
+
+
+ 
